--- a/MyApi/appsettings.Development.json
+++ b/MyApi/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=.;Initial Catalog=DivisionByZeroDb;Integrated Security=true",
-    "Elmah": "Data Source=.;Initial Catalog=DivisionByZeroLogDb;Integrated Security=true"
+    "SqlServer": "Data Source=.;Initial Catalog=DivarDb;Integrated Security=true",
+    "Elmah": "Data Source=.;Initial Catalog=DivarLogDb;Integrated Security=true"
   },
   "Logging": {
     "IncludeScopes": false,
