--- a/MyApi/appsettings.json
+++ b/MyApi/appsettings.json
@@ -12,6 +12,16 @@
     }
   },
   "AllowedHosts": "*",
+  "HealthCheckUI": {
+    "HealthChecks": [
+      {
+        "Name": "health",
+        "Uri": "http://localhost:56966/health"
+      }
+    ],
+    "EvaluationTimeOnSecond": 10,
+    "MinimumSecondBetweenFailureNotifications": 60 
+  },
   "SiteSettings": {
     "ElmahPath": "/elmah-errors",
     "SecondLevelCache": "60",
