add Sieve package, update packages

--- a/MyApi/appsettings.Development.json
+++ b/MyApi/appsettings.Development.json
@@ -3,6 +3,12 @@
     "SqlServer": "Data Source=.;Initial Catalog=DivarDb;Integrated Security=true",
     "Elmah": "Data Source=.;Initial Catalog=DivarLogDb;Integrated Security=true"
   },
+  "Sieve": {
+    "CaseSensitive": true,
+    "DefaultPageSize": 20,
+    "MaxPageSize": 50,
+    "ThrowExceptions": true
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
