--- a/MyApi/appsettings.json
+++ b/MyApi/appsettings.json
@@ -3,6 +3,12 @@
     "SqlServer": "Data Source=.;Initial Catalog=DivarDb;Integrated Security=true",
     "Elmah": "Data Source=.;Initial Catalog=DivarLogDb;Integrated Security=true"
   },
+  "Sieve": {
+    "CaseSensitive": true,
+    "DefaultPageSize": 20,
+    "MaxPageSize": 50,
+    "ThrowExceptions": true
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -20,7 +26,7 @@
       }
     ],
     "EvaluationTimeOnSecond": 10,
-    "MinimumSecondBetweenFailureNotifications": 60 
+    "MinimumSecondBetweenFailureNotifications": 60
   },
   "SiteSettings": {
     "ElmahPath": "/elmah-errors",
