--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.6" />
+    <PackageReference Include="Sieve" Version="2.3.3" />
   </ItemGroup>
 
   <ItemGroup>
